# HikariWave

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml  test.py
docs/: index.md
docs/pages/api/: client.md  connection.md  constants.md  error.md  flag.md  header.md  opcode.md  protocol.md  voice.md
docs/pages/api/audio/: encryption.md  ffmpeg.md  header.md  opus.md  player.md
docs/pages/api/audio/source/: base.md  file.md  silent.md  web.md
docs/pages/changelog/: 0.0.1a1.md  index.md
docs/pages/tutorials/: index.md
hikariwave/: __init__.py  client.py  connection.py  constants.py  error.py  flag.py  header.py  opcode.py  opcodes.py  protocol.py  voice.py
hikariwave/audio/: __init__.py  encryption.py  ffmpeg.py  header.py  opus.py  player.py
hikariwave/audio/source/: __init__.py  base.py  file.py  silent.py  web.py
hikariwave/internal/: about.py  constants.py
